fix(unity-bootstrap-theme): fix video hero overlay height on mobile screens
fix video hero overlay height on mobile screens

--- a/packages/unity-bootstrap-theme/src/scss/extends/_heroes.scss
+++ b/packages/unity-bootstrap-theme/src/scss/extends/_heroes.scss
@@ -422,6 +422,10 @@ div.uds-hero-lg {
       margin-bottom: $uds-size-spacing-4;
     }
   }
+
+  div.uds-hero-lg.uds-video-hero.has-btn-row .hero-overlay {
+    height: 100%;
+  }
 }
 
 /*--------------------------------------------------------------
